# course_5

./: .coverage  .dockerignore  .env.sample  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: celery.py  settings.py  urls.py
habits/: models.py  permissions.py  serializers.py  services.py  tasks.py  tests.py  urls.py  validators.py  views.py
habits/migrations/: 0001_initial.py
nginx/: nginx.conf
users/: models.py  serializers.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_alter_user_options_remove_user_username_user_chat_id_and_more.py  0003_remove_user_chat_id_remove_user_token_user_tg_id.py
